refactor: 修改LLMService接口
- 修改LLMService接口,删除了promptList参数,无需每次调用大模型api时进行提示对话嵌入,详见service/LLMService.java
- 修改History类中提示词列表和提示对话的存储方式,详见model/History.java
- 删除了不必要的api : POST  /api/history/{historyid}/promptlist,用户创建历史之后,这个历史的表单键值对和提示对话都是只读的